--- a/embedyt.ipynb
+++ b/embedyt.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ab81cf43",
+   "metadata": {},
+   "source": [
+    "# YouTube Video Embedder\n",
+    "\n",
+    "Embeds a YouTube video inline in the notebook from a URL using `pytube` and `IPython.display`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bdc287c5",
@@ -18,7 +28,7 @@
   }
  ],
  "metadata": {
-  "solveit_dialog_mode": "learning",
+  "solveit_dialog_mode": "concise",
   "solveit_ver": 2
  },
  "nbformat": 4,
