--- a/transcriptyt.ipynb
+++ b/transcriptyt.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "01c1f31b",
+   "metadata": {
+    "time_run": "2026-02-21T16:51:15.921439+00:00"
+   },
+   "source": [
+    "# YouTube Transcript Fetcher\n",
+    "\n",
+    "Fetches the transcript (captions) for a YouTube video using `youtube_transcript_api` and `pytube`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cf404c21",
@@ -22,7 +34,7 @@
   }
  ],
  "metadata": {
-  "solveit_dialog_mode": "learning",
+  "solveit_dialog_mode": "concise",
   "solveit_ver": 2
  },
  "nbformat": 4,
