Add function to retrieve chapters from a YouTube video

--- a/yt2viz.ipynb
+++ b/yt2viz.ipynb
@@ -29,6 +29,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f0dda9f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yt_chapters(video_url):\n",
+    "    \"Return list of chapters for a YouTube video\"\n",
+    "    return YouTube(video_url).chapters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13ab6255",
    "metadata": {},
    "outputs": [],
