Add show_frames function to visualize grabbed frames from YouTube videos

--- a/yt2viz.ipynb
+++ b/yt2viz.ipynb
@@ -48,7 +48,8 @@
     "from io import BytesIO\n",
     "from PIL import Image\n",
     "import ffmpeg\n",
-    "from lisette.core import *"
+    "from lisette.core import *\n",
+    "import base64"
    ]
   },
   {
@@ -83,14 +84,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e735846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "def show_frames(url, timestamp, rows=2, cols=3):\n",
+    "    imgs = grab_frames(url, timestamp, n_frames=rows*cols)\n",
+    "    fig, axes = plt.subplots(rows, cols, figsize=(5*cols, 4*rows))\n",
+    "    for ax, img in zip(axes.flat, imgs): ax.imshow(img); ax.axis('off')\n",
+    "    plt.tight_layout(); plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a2d36493",
    "metadata": {},
    "outputs": [],
    "source": [
     "def grab_frame_tool(\n",
-    "    url,\n",
-    "    timestamp: float,  # Time in seconds to capture around\n",
-    "    window: float = 4.0,  # Duration in seconds to capture (centered on timestamp)\n",
+    "    url: str, # Streamable MP4 URL from yt_stream_url()\n",
+    "    timestamp: float, # Time in seconds to capture around\n",
+    "    window: float = 4.0, # Duration in seconds to capture (centered on timestamp)\n",
     "    n_frames: int = 5 # Number of frames to extract from the window\n",
     ") -> ToolResponse:\n",
     "    \"\"\"\n",
